# Connect4

./: .dockerignore  Dockerfile  README.md  app.py  golf.py  main.js  pyproject.toml
.github/workflows/: c4app-AutoDeployTrigger-fa7f2e57-a3ea-45ef-ac72-b74c2091eb2c.yml  main_Connect4.yml  main_testpcconnect.yml
