[tool.poetry]
name = "testproj"
version = "0.1.0"
description = ""
authors = ["Pat Cunniff <pjcfifa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^10.4"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
